# silq-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: CLAUDE.md
src/: ast.rs  checker.rs  consteval.rs  conversion.rs  errors.rs  hqir.rs  lexer.rs  lib.rs  main.rs  modules.rs  options.rs  parser.rs  qsim.rs  reverse.rs  scope.rs  semantic.rs  token.rs  wasm.rs
test/: bell.slq  demo.slq  deutsch.slq
